--- a/iris.ipynb
+++ b/iris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "149        5.9        3.0        5.1        1.8  Iris-virginica"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,24 +705,24 @@
     "    for fuzzifier in fuzzifiers:\n",
     "        params_fuzzifier = model_selection_grid \n",
     "        params_fuzzifier['fuzzifier'] = [fuzzifier]\n",
-    "        score, _ = esperimento(columns,model_class, y, params_fuzzifier, num_fold_grid_search, num_fold_cross_val, scaling=StandardScaler(), dim_reduction=None)\n",
+    "        score, _ = experiment(columns,model_class, y, params_fuzzifier, num_fold_grid_search, num_fold_cross_val, scaling=StandardScaler(), dim_reduction=None)\n",
     "        table.loc[fuzzifiers_to_string[fuzzifier]][str(columns)] = score\n",
     "    return table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def esperimento(columns,model_class, y, model_selection_grid, num_fold_grid_search, num_fold_cross_val, logger = None, scaling=StandardScaler(), dim_reduction=None):\n",
+    "def experiment(columns,model_class, y, model_selection_grid, num_fold_grid_search, num_fold_cross_val, logger = None, scaling=StandardScaler(), dim_reduction=None):\n",
     "    grid = {}\n",
     "    if logger is not None:\n",
     "        logger.info('ESPERIMENTO CON %s',str(columns))\n",
     "        \n",
     "    dataset_values = iris_df[columns].values\n",
-    "    result, grid = addestra(FuzzyInductor,dataset_values,y,model_selection_grid,3,3)\n",
+    "    result, grid = train(FuzzyInductor,dataset_values,y,model_selection_grid,3,3)\n",
     "    \n",
     "    if logger is not None:\n",
     "        logger.info('Score: %s',str(result.mean()))\n",
@@ -733,11 +733,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def addestra(model_class, X, y, model_selection_grid, num_fold_grid_search, num_fold_cross_val, logger = None, scaling=StandardScaler(), dim_reduction=None):\n",
+    "def train(model_class, X, y, model_selection_grid, num_fold_grid_search, num_fold_cross_val, logger = None, scaling=StandardScaler(), dim_reduction=None):\n",
     "        \n",
     "    if logger is not None:\n",
     "        logger.info('Inizio Addestramento')\n",
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
